<resources>

    <string name="app_name">Store</string>
    <string name="Username">Nom utilisateur</string>
    <string name="UserInscrire">Utilisateur</string>
    <string name="Password">Mot de passe</string>
    <string name="Password2">Retapez mot de passe</string>
    <string name="Login">Continuer</string>
    <string name="Inscrire">S\'inscrire</string>
    <string name="Phone">Numéro de téléphone</string>
    <string name="Email">Adresse email</string>
    <string name="Confirm">Créer mon compte</string>
    <string name="welcome">Bienvenue utilisateur</string>

    <string name="Forget">Mot de passe oublié ?</string>
    <string name="cam">Prendre une photo</string>
    <string name="disponible">Disponibilité :</string>
    <string name="adresse">Adresse :</string>

    <string-array name="programming_languages">
        <item>c++</item>
        <item>c++</item>
        <item>c++</item>
        <item>c++</item>
        <item>c++</item>


    </string-array>
    <string-array name="description">
        <item>this is a random description !</item>
        <item>this is a random description !</item>
        <item>this is a random description !</item>
        <item>this is a random description !</item>
        <item>this is a random description !</item>


    </string-array>

</resources>
