<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".controller.LoginActivity">

    <ImageView

        android:id="@+id/ImgV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImgV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/Username"
        android:inputType="text"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_action_user"


        />

    <EditText

        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignLeft="@id/etUsername"
        android:layout_alignStart="@id/etUsername"
        android:layout_marginTop="45dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_action_password"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Forget"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:textColor="@color/loginColor"
        android:id="@+id/tvMDPoublie"
        android:autoLink="web"
        />



    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnConnect"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="70dp"
        android:text="@string/Login"
        android:layout_centerHorizontal="true"
        android:background="@color/loginColor"
        android:textColor="@color/backgroundColor"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnInscrire"
        android:layout_below="@+id/btnConnect"
        android:layout_marginTop="30dp"
        android:text="@string/Inscrire"
        android:layout_centerHorizontal="true"
        android:background="@color/inscrireColor"
        android:textColor="@color/backgroundColor"
        />






</RelativeLayout>
    </ScrollView>
