<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".controller.InscrireActivity">

    <ImageView

        android:id="@+id/ImgV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo" />


    <EditText

        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImgV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_email"

        />

    <EditText

        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_alignLeft="@id/etEmail"
        android:layout_marginTop="50dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_action_password"

        />
    <EditText

        android:id="@+id/etPasswordVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@id/etPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/Password2"
        android:inputType="textPassword"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_action_password"

        />
    <EditText

        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordVerif"
        android:layout_alignLeft="@id/etPasswordVerif"
        android:layout_marginTop="50dp"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:background="#11000000"
        android:ems="10"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_phone"

        />


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirm"
        android:layout_below="@+id/etPhone"
        android:layout_marginTop="45dp"
        android:text="@string/Confirm"
        android:layout_centerHorizontal="true"
        android:background="@color/inscrireColor"
        android:textColor="@color/backgroundColor"
        />



</RelativeLayout>
</ScrollView>